syntax = "proto3";

option csharp_namespace = "ZipZap.FileService.Services";

message EmptyMessage{
}
